Pull up the following revisions(s) (requested by dsl in ticket #773): 	bin/sh/expand.c:	revision 1.88 	bin/sh/expand.h:	revision 1.19

Fix the expansion of "$(foo-$bar}" so that IFS isn't applied when
expanding $bar. Should fix PR bin/47361